--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Javascript Practice</title>
-    <script src="App.js"></script>
+    <script src="App.js" defer></script>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <h1 id='title'>Ilias Fasilakis</h1>
+    <button class="btn" onclick="toggleDarkMode()">Click me</button>
     
 </body>
 </html>
