--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
   </head>
   <body>
     <h1 id="title">Ilias Fasilakis</h1>
-    <button class="btn" onclick="toggleDarkMode()">Click me</button>
+    <button type="button" class="btn btn-primary position-relative">
+      Inbox
+      <span
+        class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
+      >
+        99+
+        <span class="visually-hidden">unread messages</span>
+      </span>
+    </button>
   </body>
 </html>
