--- a/index.html
+++ b/index.html
@@ -6,20 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Javascript Practice</title>
 
-    <script src="Simplified.js" defer></script>
+    <script src="App.js" defer></script>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <h1 id="title">Ilias Fasilakis</h1>
     <button type="button" class="btn btn-primary position-relative">
       Inbox
-      <span
-        class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
-      >
-        99+
-        <span class="visually-hidden">unread messages</span>
-      </span>
     </button>
   </body>
 </html>
-=
